Refactor solution structure and update target framework to .NET 9.0. Added new projects for Logical.Transform and Logical.Ast, and removed Logical.JavaScript. Introduced new AST nodes and updated Compiler with enhanced functionality. Updated tests to reflect changes.

--- a/doc/drafts/Нерешенные проблемы.md
+++ b/doc/drafts/Нерешенные проблемы.md
@@ -1,4 +1,4 @@
-* Как сделать систему типов "отрываемой" от конечного представления? Пример: TypeScript.
+* Как сделать систему типов "отрываемой" от конечного представления? Пример: TypeScript. Нужно ли это делать?
   * Ограничить использование типов только временем компиляции?
   * Очищать типы после компиляции?
   * Типы, которые используются в абстракциях времени исполнения, должны быть сокращаемыми. Пример: допустим у нас есть абстракция типа `t: T -> a: t -> Nat`. Если тип `t` подставляется компилятором автоматически, то он будет константным и сокращаемым (нужно доказать).
@@ -7,7 +7,7 @@
   * Исключения?
   * Возврат ошибок?
   * Монада?
-* Как преобразовывать типы из абстрактных в конкретные?
+* Как преобразовывать типы из абстрактных (Nat, Bin, Float) в конкретные (Int32, Float32)?
 
 Синтаксис:
 * Как представлять аннотации?
